--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -90,40 +90,40 @@
 				<% } %>                
 			</div>
 		</div>
-		<div class="card">
-			<div class="card-body">
-				<div class="text-right">
-					<a class="btn btn-success" href="/campgrounds/<%= campground._id %>/comments/new">Add New Comment</a>
-				</div>
-				<hr>
-				<div class="row">
-					<% campground.comments.forEach( (comment) => { %>
-						<div class="col-md-12 mb-2">
-							<div class="card">
-								<div class="card-body">
-									<div class="float-left">
-										<p class="card-title"><strong><%= comment.author.username %></strong></p>
-										<p class="card-text"><%= comment.text %></p>
-									</div>
-									<div class="float-right">
-										<p><%= moment(comment.createdAt).fromNow() %></p>
-										<% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
-											<div class="float-right">
-												<a class="btn btn-sm btn-warning" 
-													href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-												<form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
-													<input type="submit" class="btn btn-sm btn-danger" value="Delete">
-												</form>
-											</div>
-										<% } %>
-									</div>
-								</div>
-							</div>
-						</div>
-					<% }) %>
-				</div>
-			</div>
-		</div>
+    <div class="row">
+      <div class="col-md-12 mb-2">
+        <div class="card mb-2">
+          <% campground.comments.forEach( (comment) => { %>
+            <div class="card-body">
+              <div class="float-left">
+                <p class="card-title"><strong><%= comment.author.username %></strong></p>
+                <p class="card-text"><%= comment.text %></p>
+              </div>
+              <div class="float-right">
+                <p><%= moment(comment.createdAt).fromNow() %></p>
+                <% if (currentUser && (comment.author.id.equals(currentUser._id) || currentUser.isAdmin)) { %>
+                  <div class="float-right">
+                    <a class="btn btn-sm btn-warning" 
+                      href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                    <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                      <input type="submit" class="btn btn-sm btn-danger" value="Delete">
+                    </form>
+                  </div>
+                <% } %>
+              </div>
+            </div>
+          <% }) %>
+        </div>
+        <form action= "/campgrounds/<%= campground._id %>/comments" method="POST">
+          <div class="mb-2">            
+              <input class="form-control" type="text" name="comment[text]" placeholder="New comment goes here">
+          </div>
+          <div class="col-xs-8 col-sm-6 col-md-6 col-lg-4">
+              <button class="btn btn-lg btn-primary btn-block">Submit Comment</button>
+          </div>
+        </form>
+      </div>
+    </div>
 	</div>
 </div>
 
